Refactor interface to API